# qtcre-rs

./: .gitignore  Cargo.toml  README.md
src/: bytes.rs  constants.rs  error.rs  lib.rs  utils.rs
src/parsers/: default.rs  mod.rs
src/readers/: default.rs  header.rs  mod.rs  tree.rs
src/types/: compression.rs  flags.rs  mod.rs
src/types/locale/: language.rs  mod.rs  territory.rs
src/types/resource/: base.rs  dir.rs  file.rs  mod.rs
tests/fixtures/executables/: none-app  zlib-app  zstd-app
tests/fixtures/rcc/: none.rcc  zlib.rcc  zstd.rcc
