[package]
name = "qtcre"
version = "0.1.0"
description = "A library/cli for exploring and exporting Qt's contained resources"
authors = ["Krzysztof Saczuk <me@krzysztofsaczuk.pl>"]
edition = "2021"
repository = "https://github.com/zakuciael/qtcre-rs/"
documentation = "https://docs.rs/qtcre"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["qtcre", "qt", "resources", "explorer", "exporter"]
categories = ["parser-implementations", "command-line-utilities"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.0"
byteorder = "1.5.0"
pelite = "0.10.0"
regex = "1.10.2"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.49"
