[package]
name = "qtcre"
version = "0.1.0"
description = "A library/cli for exploring and exporting Qt's contained resources"
authors = ["Krzysztof Saczuk <me@krzysztofsaczuk.pl>"]
edition = "2021"
repository = "https://github.com/zakuciael/qtcre-rs/"
documentation = "https://docs.rs/qtcre"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["qtcre", "qt", "resources", "explorer", "exporter"]
categories = ["parser-implementations", "command-line-utilities"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
chrono = "0.4.31"
educe = { version = "0.4.23", features = ["Debug"], default-features = false }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.49"
flate2 = { version = "1.0.28", default-features = false, features = ["zlib"] }
zstd-safe = { version = "7.0.0", features = ["std"] }
path-absolutize = "3.1.1"
